ref/Modules/AzureRM.OperationalInsights/v1.0.12/AzureRM.OperationalInsights.md
---
Module Name: AzureRM.OperationalInsights
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 2.0.2.0
Locale: en-US
ms.assetid: A5235078-BB51-402D-BD63-560D5A07A3FE
updated_at: 11/11/2016 11:03 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.OperationalInsights/v1.0.12/AzureRM.OperationalInsights.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.OperationalInsights/v1.0.12/AzureRM.OperationalInsights.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf/azureps-cmdlets-docs/ResourceManager/AzureRM.OperationalInsights/v1.0.12/AzureRM.OperationalInsights.md
uid: ResourceManager/AzureRM.OperationalInsights/v1.0.12/AzureRM.OperationalInsights.md
ms.topic: conceptual
ms.prod: powershell
ms.technology: Azure PowerShell
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: False
ms.service: azure-powershell
---

# AzureRM.OperationalInsights Module
## Description
This topic displays help topics for the Azure Operational Insights Cmdlets. 

## AzureRM.OperationalInsights Cmdlets
### [Get-AzureRmOperationalInsightsIntelligencePacks](./Get-AzureRmOperationalInsightsIntelligencePacks.md)
Gets the available Intelligence Packs.


### [Get-AzureRmOperationalInsightsLinkTargets](./Get-AzureRmOperationalInsightsLinkTargets.md)
Gets accounts that are not associated with a subscription.


### [Get-AzureRmOperationalInsightsSavedSearchResults](./Get-AzureRmOperationalInsightsSavedSearchResults.md)
Returns the results from a query.


### [Get-AzureRmOperationalInsightsSavedSearch](./Get-AzureRmOperationalInsightsSavedSearch.md)
Returns all of the saved searches for a specified workspace.


### [Get-AzureRmOperationalInsightsSchema](./Get-AzureRmOperationalInsightsSchema.md)
Returns the schema associated with a workspace.


### [Get-AzureRmOperationalInsightsSearchResults](./Get-AzureRmOperationalInsightsSearchResults.md)
Returns search results based on the specified parameters.


### [Get-AzureRmOperationalInsightsStorageInsight](./Get-AzureRmOperationalInsightsStorageInsight.md)
Gets information about a Storage Insight.


### [Get-AzureRmOperationalInsightsWorkspaceManagementGroups](./Get-AzureRmOperationalInsightsWorkspaceManagementGroups.md)
Gets details of management groups connected to a workspace.


### [Get-AzureRmOperationalInsightsWorkspaceSharedKeys](./Get-AzureRmOperationalInsightsWorkspaceSharedKeys.md)
Gets the shared keys for a workspace.


### [Get-AzureRmOperationalInsightsWorkspaceUsage](./Get-AzureRmOperationalInsightsWorkspaceUsage.md)
Gets the usage data for a workspace.


### [Get-AzureRmOperationalInsightsWorkspace](./Get-AzureRmOperationalInsightsWorkspace.md)
Gets information about a workspace.

### [New-AzureRmOperationalInsightsComputerGroup](./New-AzureRmOperationalInsightsComputerGroup.md)
Creates a computer group.

### [New-AzureRmOperationalInsightsSavedSearch](./New-AzureRmOperationalInsightsSavedSearch.md)
Creates a new saved search with the specified parameters.


### [New-AzureRmOperationalInsightsStorageInsight](./New-AzureRmOperationalInsightsStorageInsight.md)
Creates a Storage Insight inside a workspace.

### [New-AzureRmOperationalInsightsWorkspace](./New-AzureRmOperationalInsightsWorkspace.md)
Creates a workspace.

### [Remove-AzureRmOperationalInsightsSavedSearch](./Remove-AzureRmOperationalInsightsSavedSearch.md)
Removes a saved search from the workspace.


### [Remove-AzureRmOperationalInsightsStorageInsight](./Remove-AzureRmOperationalInsightsStorageInsight.md)
Removes a Storage Insight.


### [Remove-AzureRmOperationalInsightsWorkspace](./Remove-AzureRmOperationalInsightsWorkspace.md)
Removes a workspace.

### [Set-AzureRmOperationalInsightsIntelligencePack](./Set-AzureRmOperationalInsightsIntelligencePack.md)
Enables or disables the specified Intelligence Pack.


### [Set-AzureRmOperationalInsightsSavedSearch](./Set-AzureRmOperationalInsightsSavedSearch.md)
Updates a saved search that already exists.


### [Set-AzureRmOperationalInsightsStorageInsight](./Set-AzureRmOperationalInsightsStorageInsight.md)
Updates a Storage Insight.


### [Set-AzureRmOperationalInsightsWorkspace](./Set-AzureRmOperationalInsightsWorkspace.md)
Updates a workspace.



