ref/Modules/AzureRM.OperationalInsights/v2.1.0/AzureRM.OperationalInsights.md
---
Module Name: AzureRM.OperationalInsights
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: Please enter FwLink manually
Help Version: Please enter version of help manually (X.X.X.X) format
Locale: en-US
ms.assetid: 1A35C857-41DF-4E14-9844-6F1EEACD4FCA
updated_at: 11/11/2016 11:03 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.OperationalInsights/v2.1.0/AzureRM.OperationalInsights.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.OperationalInsights/v2.1.0/AzureRM.OperationalInsights.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf/azureps-cmdlets-docs/ResourceManager/AzureRM.OperationalInsights/v2.1.0/AzureRM.OperationalInsights.md
uid: ResourceManager/AzureRM.OperationalInsights/v2.1.0/AzureRM.OperationalInsights.md
ms.topic: conceptual
ms.prod: powershell
ms.technology: Azure PowerShell
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: False
ms.service: azure-powershell
---

# AzureRM.OperationalInsights Module
## Description
This topic displays help topics for the Azure Operational Insights Cmdlets.

## AzureRM.OperationalInsights Cmdlets
### [Disable-AzureRmOperationalInsightsIISLogCollection](./Disable-AzureRmOperationalInsightsIISLogCollection.md)
Stops collection of IIS logs from computers.


### [Disable-AzureRmOperationalInsightsLinuxCustomLogCollection](./Disable-AzureRmOperationalInsightsLinuxCustomLogCollection.md)
Stops collection of custom logs from Linux computers.


### [Disable-AzureRmOperationalInsightsLinuxPerformanceCollection](./Disable-AzureRmOperationalInsightsLinuxPerformanceCollection.md)
Stops collection of performance counters from Linux computers.


### [Disable-AzureRmOperationalInsightsLinuxSyslogCollection](./Disable-AzureRmOperationalInsightsLinuxSyslogCollection.md)
Stops collection of syslog data from Linux computers.


### [Enable-AzureRmOperationalInsightsIISLogCollection](./Enable-AzureRmOperationalInsightsIISLogCollection.md)
Starts collection of IIS logs from computers in a workspace.


### [Enable-AzureRmOperationalInsightsLinuxCustomLogCollection](./Enable-AzureRmOperationalInsightsLinuxCustomLogCollection.md)
Starts collection of custom logs from Linux computers.


### [Enable-AzureRmOperationalInsightsLinuxPerformanceCollection](./Enable-AzureRmOperationalInsightsLinuxPerformanceCollection.md)
Starts collection of performance counters from Linux computers.


### [Enable-AzureRmOperationalInsightsLinuxSyslogCollection](./Enable-AzureRmOperationalInsightsLinuxSyslogCollection.md)
Starts collection of syslog data from Linux computers.


### [Get-AzureRmOperationalInsightsDataSource](./Get-AzureRmOperationalInsightsDataSource.md)
Gets data sources.


### [Get-AzureRmOperationalInsightsIntelligencePacks](./Get-AzureRmOperationalInsightsIntelligencePacks.md)
Gets the available Intelligence Packs.


### [Get-AzureRmOperationalInsightsLinkTargets](./Get-AzureRmOperationalInsightsLinkTargets.md)
Gets accounts that are not associated with a subscription.


### [Get-AzureRmOperationalInsightsSavedSearchResults](./Get-AzureRmOperationalInsightsSavedSearchResults.md)
Returns the results from a query.


### [Get-AzureRmOperationalInsightsSavedSearch](./Get-AzureRmOperationalInsightsSavedSearch.md)
Returns all of the saved searches for a specified workspace.


### [Get-AzureRmOperationalInsightsSchema](./Get-AzureRmOperationalInsightsSchema.md)
Returns the schema associated with a workspace.


### [Get-AzureRmOperationalInsightsSearchResults](./Get-AzureRmOperationalInsightsSearchResults.md)
Returns search results based on the specified parameters.


### [Get-AzureRmOperationalInsightsStorageInsight](./Get-AzureRmOperationalInsightsStorageInsight.md)
Gets information about a Storage Insight.


### [Get-AzureRmOperationalInsightsWorkspaceManagementGroups](./Get-AzureRmOperationalInsightsWorkspaceManagementGroups.md)
Gets details of management groups connected to a workspace.


### [Get-AzureRmOperationalInsightsWorkspaceSharedKeys](./Get-AzureRmOperationalInsightsWorkspaceSharedKeys.md)
Gets the shared keys for a workspace.


### [Get-AzureRmOperationalInsightsWorkspaceUsage](./Get-AzureRmOperationalInsightsWorkspaceUsage.md)
Gets the usage data for a workspace.


### [Get-AzureRmOperationalInsightsWorkspace](./Get-AzureRmOperationalInsightsWorkspace.md)
Gets information about a workspace.


### [New-AzureRmOperationalInsightsAzureAuditDataSource](./New-AzureRmOperationalInsightsAzureAuditDataSource.md)
Enables collection of the Azure audit log for a subscription.


### [New-AzureRmOperationalInsightsComputerGroup](./New-AzureRmOperationalInsightsComputerGroup.md)
Creates a computer group.


### [New-AzureRmOperationalInsightsCustomLogDataSource](./New-AzureRmOperationalInsightsCustomLogDataSource.md)
Defines a custom log collection policy.


### [New-AzureRmOperationalInsightsLinuxPerformanceObjectDataSource](./New-AzureRmOperationalInsightsLinuxPerformanceObjectDataSource.md)
Adds performance counters to all Linux computers in a workspace.


### [New-AzureRmOperationalInsightsLinuxSyslogDataSource](./New-AzureRmOperationalInsightsLinuxSyslogDataSource.md)
Adds a data source to Linux computers.


### [New-AzureRmOperationalInsightsSavedSearch](./New-AzureRmOperationalInsightsSavedSearch.md)
Creates a new saved search with the specified parameters.


### [New-AzureRmOperationalInsightsStorageInsight](./New-AzureRmOperationalInsightsStorageInsight.md)
Creates a Storage Insight inside a workspace.


### [New-AzureRmOperationalInsightsWindowsEventDataSource](./New-AzureRmOperationalInsightsWindowsEventDataSource.md)
Collects event logs from computers that run the Windows operating system.


### [New-AzureRmOperationalInsightsWindowsPerformanceCounterDataSource](./New-AzureRmOperationalInsightsWindowsPerformanceCounterDataSource.md)
Adds Windows performance counter data source for connected computers that run the Windows operating system.


### [New-AzureRmOperationalInsightsWorkspace](./New-AzureRmOperationalInsightsWorkspace.md)
Creates a workspace.


### [Remove-AzureRmOperationalInsightsDataSource](./Remove-AzureRmOperationalInsightsDataSource.md)
Deletes a data source.


### [Remove-AzureRmOperationalInsightsSavedSearch](./Remove-AzureRmOperationalInsightsSavedSearch.md)
Removes a saved search from the workspace.


### [Remove-AzureRmOperationalInsightsStorageInsight](./Remove-AzureRmOperationalInsightsStorageInsight.md)
Removes a Storage Insight.


### [Remove-AzureRmOperationalInsightsWorkspace](./Remove-AzureRmOperationalInsightsWorkspace.md)
Removes a workspace.


### [Set-AzureRmOperationalInsightsDataSource](./Set-AzureRmOperationalInsightsDataSource.md)
Updates a data source.


### [Set-AzureRmOperationalInsightsIntelligencePack](./Set-AzureRmOperationalInsightsIntelligencePack.md)
Enables or disables the specified Intelligence Pack.


### [Set-AzureRmOperationalInsightsSavedSearch](./Set-AzureRmOperationalInsightsSavedSearch.md)
Updates a saved search that already exists.


### [Set-AzureRmOperationalInsightsStorageInsight](./Set-AzureRmOperationalInsightsStorageInsight.md)
Updates a Storage Insight.


### [Set-AzureRmOperationalInsightsWorkspace](./Set-AzureRmOperationalInsightsWorkspace.md)
Updates a workspace.



